--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
                         </form>
                     </div>
                     <h2 class="h3 mt-5">Bookmarked movies</h2>
-                    <ul class="list-group" id="list">
-                    </ul>
+                    <ul class="list-group" id="list"></ul>
                 </div>
                 <div class="avengers__right-site col-8">
                     <h3 class="h5" id="search_heading">
